dark mode + animation for home page

--- a/about.html
+++ b/about.html
@@ -40,7 +40,8 @@
 	<div class="container_summary_short">
 		<div class="section_summary">
 			<div class="caption_container">
-				<img class="summary_image" id="profile" src="assets/reggie.JPG"/>
+				<img class="summary_image" src="assets/regina-headshot.jpg"/>
+				<!-- <img class="summary_image" id="profile" src="assets/reggie.JPG"/> -->
 				<!-- <img class="summary_image" src="assets/profile-fast.gif"/> -->
 				<!-- <button class="caption_icon">
 						<i class="fas fa-info"></i>
