add more linoleum ecga prints

--- a/donate.html
+++ b/donate.html
@@ -76,6 +76,13 @@
 							<div class="sideBySideItem width_50 sideBySideItem_isLast">
 									<img class="summary_image" src="assets/ecga-newyork.png"/>
 							</div>
+							<div class="sideBySideItem width_50">
+								<img class="summary_image" src="assets/ecga-penn.jpeg"/>
+						</div>
+						<div class="sideBySideItem width_50 sideBySideItem_isLast">
+								<img class="summary_image" src="assets/ecga-dc.jpeg"/>
+						</div>
+
 							<!-- <div class="sideBySideItem width_33 sideBySideItem_isLast">
 									
 							</div> -->
