fix broken link

--- a/donate.html
+++ b/donate.html
@@ -19,7 +19,7 @@
 </head>
 <body>
 	<div class="head" id="head">
-			<a href="/index.html" class="logo" id="logo"></a>
+			<a href="index.html" class="logo" id="logo"></a>
 		<header class="container">
 			<!-- <a href="index.html"><img class="logo" src="assets/reginaLogo.png" alt="Regina Yan"></a> -->
 			<div class="topnav" id="myTopnav">
