--- a/donate.html
+++ b/donate.html
@@ -56,7 +56,8 @@
                         <div class="info">
                             <div class="header_sm">Send me a <strong>screenshot of your donation</strong>, your <strong>address</strong>, and which <strong>item(s)</strong> you’d like</div>
                             <div class="caption_description">Instagram DM: @designbyregina
-                                <br/> Email: reginayan96@gmail.com
+                                <br/> <strong>or</strong>
+								<br/> Email: reginayan96@gmail.com
                                 <br/> <br/>
 
                                 I can currently only mail to US addresses</div>
