updating delivery time

--- a/donate.html
+++ b/donate.html
@@ -88,14 +88,14 @@
 									
 							</div> -->
 						</div>
-                        <div class="caption_description">I’m slowly adding more Greenway states, so stay tuned if you don't see the state you want! I used high quality archival (this means it doesn't fade or smudge!) on cardstock. Approx 2.6 in. by 4 in.</div>
+                        <div class="caption_description">I’m slowly adding more Greenway states, so stay tuned if you don't see the state you want! I used high quality archival (this means it doesn't fade or smudge!) on cardstock. Approx 2.6 in. by 4 in.<br/><br/>Please allow 1 week for printing & delivery</div>
                     </div>
                     <div class="item borderBottom">
                         <div class="header_sm margin_bottom">
                             <strong>Linoleum Print</strong> - Minimum $20 donation
                         </div>
                         <img class="summary_image" src="assets/lino-reggie1.png"/>
-                        <div class="caption_description">This linoleum print is 8 in. by 10 in. and printed with black ink on premium cardstock paper.</div>
+                        <div class="caption_description">This linoleum print is 8 in. by 10 in. and printed with black ink on premium cardstock paper.<br/><br/>Please allow 2 weeks for printing & delivery</div>
                     </div>
                     <div class="item">
                         <div class="header_sm margin_bottom">
@@ -112,7 +112,7 @@
 									
 							</div> -->
 						</div>
-                        <div class="caption_description">Libraries are my favorite place in the world, and that’s partly due to their maker spaces -- I machine embroidered these t-shirts at the San Diego IDEA Lab. It’s a Bella Canvas T-shirt in Heather Dusty Blue (52% cotton and 48% polyster) with a dark green rayon embroidery thread.</div>
+                        <div class="caption_description">Libraries are my favorite place in the world, and that’s partly due to their maker spaces -- I machine embroidered these t-shirts at the San Diego IDEA Lab. It’s a Bella Canvas T-shirt in Heather Dusty Blue (52% cotton and 48% polyster) with a dark green rayon embroidery thread.<br/><br/>Please allow 2 weeks for embroidering & delivery</div>
                     </div>
                 </div>
 			</div>
