--- a/index.html
+++ b/index.html
@@ -84,14 +84,14 @@
 			<div class="category_title dark">FEATURED PROJECTS</div>
 		</div>
 	<div class="container_cards featured ">
-		<a href="projects/superpay.html" class="card_full">
+		<a href="projects/superdial.html" class="card_full">
 			<div class="container_sideBySide">
 				<div class="sideBySideItem width_50">
-					<img class="card_image_full" src="assets/superpay-cover.svg"/>
+					<img class="card_image_full outline" src="assets/superdial-marketing.jpeg"/>
 				</div>
 				<div class="sideBySideItem width_50 relative">
-					<div class="card_title index dark ">SuperPay</div>
-					<div class="card_description index dark">Mostly Designing (but also Building, PM-ing, Marketing) an out-of-network claim-filing platform
+					<div class="card_title index dark ">SuperDial</div>
+					<div class="card_description index dark">Mostly Designing (but also Building, PM-ing, Marketing) an automated outbound healthcare phone caller
 					</div>
 					<div class="card_tag_container_relative">
 							<div class="card_tag ux">UX/UI</div>
