--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 				</div>
 			</div>
 		</a>
-		<a href="projects/appian.html" class="card_full">
+		<a href="projects/linotime.html" class="card_full">
 			<div class="container_sideBySide">
 				<div class="sideBySideItem width_50">
 					<img class="card_image_full" src="assets/lino-cover.png"/>
