--- a/donate.html
+++ b/donate.html
@@ -72,16 +72,20 @@
                         </div>
 						<div class="container_sideBySide"> 
 							<div class="sideBySideItem width_50">
-									<img class="summary_image" src="assets/ecga-connecticut.png"/>
+									<img class="summary_image" src="assets/ecga-connecticut.jpeg"/>
+									<div class="image_text"><b>Connecticut |  </b>Farmington Canal Trail</div>
 							</div>
 							<div class="sideBySideItem width_50 sideBySideItem_isLast">
 									<img class="summary_image" src="assets/ecga-newyork.png"/>
+									<div class="image_text"><b>New York |  </b>Hudson River Greenway</div>
 							</div>
 							<div class="sideBySideItem width_50">
 								<img class="summary_image" src="assets/ecga-penn.jpeg"/>
+								<div class="image_text"><b>Pennsylvania |  </b>Schuylkill River Trail</div>
 						</div>
 						<div class="sideBySideItem width_50 sideBySideItem_isLast">
 								<img class="summary_image" src="assets/ecga-dc.jpeg"/>
+								<div class="image_text"><b>Washington, DC |  </b>Mount Vernon Trail</div>
 						</div>
 
 							<!-- <div class="sideBySideItem width_33 sideBySideItem_isLast">
@@ -101,6 +105,7 @@
                         <div class="header_sm margin_bottom">
                             <strong>Embroidered T-Shirt</strong> - Minimum $50 donation
                         </div>
+						<img class="summary_image" src="assets/ecga-shirt3.jpeg"/>
 						<div class="container_sideBySide"> 
 							<div class="sideBySideItem width_50">
 									<img class="summary_image" src="assets/ecga-shirt1.png"/>
@@ -112,7 +117,7 @@
 									
 							</div> -->
 						</div>
-                        <div class="caption_description">Libraries are my favorite place in the world, and that’s partly due to their maker spaces -- I machine embroidered these t-shirts at the San Diego IDEA Lab. It’s a Bella Canvas T-shirt in Heather Dusty Blue (52% cotton and 48% polyster) with a dark green rayon embroidery thread.<br/><br/>Please allow 2 weeks for embroidering & delivery</div>
+                        <div class="caption_description">Hand-embroidered biker girl! It’s a Bella Canvas T-shirt in Heather Dusty Blue (52% cotton and 48% polyster) with a dark green embroidery thread.<br/><br/>Please allow 2 weeks for embroidering & delivery</div>
                     </div>
                 </div>
 			</div>
