styling the home page more

--- a/about.html
+++ b/about.html
@@ -142,7 +142,7 @@
 			</button></a>
 			</div>
 	</div>
-	<div class="about_container_flex">
+	<!-- <div class="about_container_flex">
 		<div class="about_flex">
 			<div class="section_title">Strengths</div>
 			<div class="about_flex_container">
@@ -193,7 +193,7 @@
 				</div>
 			</div>
 		</div>
-	</div>
+	</div> -->
 	<div class="container_content_wrapper_resume">
 		<div class="container_content_wrapper_content vertical">
 			<div class="container_sideBySide">
