--- a/index.html
+++ b/index.html
@@ -40,10 +40,12 @@
 			<div class="h1 white">
 				Hi there, I'm Regina
 			</div>
-			<div class="text white halfwidth">
+			<div class="text white">
 				A designer, engineer, goofball, and lover of the outdoors.
 				</br></br>
-				Currently eating chocolate, digital nomading along the West Coast, and helping folks navigate the complicated healthcare claim filing world with SuperBill.
+				Currently eating chocolate, digital nomading along the West Coast, and leading design at <a href="http://www.thesuperbill.com" target="_blank" class="link white">SuperBill <i class="fas fa-external-link-square-alt"></i></a> 
+				<br/><br/>
+				I'm also on the board of the <a href="http://greenway.org/" target="_blank" class="link white">East Coast Greenway <i class="fas fa-external-link-square-alt"></i></a>  - help us build a bike route from Maine to Florida, and <a href="https://www.reginayan.me/donate" target="_blank" class="link white">receive some of my art </a> in exchange!
 			</div>
 		</div>
 
