commenting out unused scripts

--- a/index.html
+++ b/index.html
@@ -177,12 +177,12 @@
 		</div>
 	</div>
 </body>
-<script>
+<!-- <script>
 	var image = document.getElementById("image");
 	image.onmouseover = function() {  image.src = "assets/nutshell-joy.png"; }
 	image.onmouseout = function() {  image.src = "assets/nutshell-prejoy.png"; }
 	document.getElementById("year").innerHTML = new Date().getFullYear();
-	</script>
+	</script> -->
 <script type="text/javascript">
 	function clickNav() {
 		var x = document.getElementById("myTopnav");
