updating embroidery image

--- a/donate.html
+++ b/donate.html
@@ -105,7 +105,7 @@
                         <div class="header_sm margin_bottom">
                             <strong>Embroidered T-Shirt</strong> - Minimum $50 donation
                         </div>
-						<img class="summary_image" src="assets/ecga-shirt3.jpeg"/>
+						<img class="summary_image" src="assets/ecg-embroidery.jpg"/>
 						<div class="container_sideBySide"> 
 							<div class="sideBySideItem width_50">
 									<img class="summary_image" src="assets/ecga-shirt1.png"/>
