adding empire state trail

--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
 	let year = y.getFullYear();
 	document.getElementById("year").innerHTML = year;
 </script>
-<script>
+<!-- <script>
 		var i = 0;
 		var txt = "Hi there, I'm Regina!";
 		var speed = 80;
@@ -309,6 +309,6 @@
 		  }
 		}
 
-</script>
+</script> -->
 
 </html>
