--- a/misc.html
+++ b/misc.html
@@ -61,6 +61,15 @@
 								<div class="card_tag film">Film</div>
 							</div>
 					</a>
+					<a href="projects/empirestatetrail.html" class="card">
+						<img class="card_image" src="assets/est-reggie-shep.jpg"/>
+						<div class="card_title">Biking the Empire State Trail</div>
+						<div class="card_description">Shep and I attempt and (mostly) succeed in biking across New York for a wedding</div>
+						<div class="card_tag_container">
+								<div class="card_tag biking">Biking</div>
+								<div class="card_tag film">Film</div>
+							</div>
+					</a>
 					<a href="projects/foca17.html" class="card">
 						<img class="card_image" src="assets/lakemorey.png"/>
 						<div class="card_title">Journey Back to the Ice</div>
