--- a/projects/ecg.html
+++ b/projects/ecg.html
@@ -50,6 +50,7 @@
                 I dove into this trip with essentially zero bikepacking knowledge and endurance cycling experience, but I made it, and I truly believe anyone who sets their mind to it can accomplish this (and so much more) as well. I’ve documented my planning process and trip thoughts to help you out if you’re interested in biking the East Coast Greenway, too :D
                 </br> 
                 <a href="https://youtu.be/7F_da3Irx8Q" target="_blank" class="button_primary">Youtube Video <i class="fas fa-external-link-square-alt"></i></a>
+                <a href="https://www.reginayan.me/donate" target="_blank" class="button_primary">Donate for Bike Art <i class="fas fa-external-link-square-alt"></i></a>
                 <a href="https://www.rei.com/blog/cycle/thru-biking-the-east-coast-greenway" target="_blank" class="button_secondary">REI Article <i class="fas fa-external-link-square-alt"></i></a>
                 <a href="https://seniorripper.com/east-coast-greenway/" target="_blank" class="button_secondary">Senior Rippers Article <i class="fas fa-external-link-square-alt"></i></a>
                 <a href="https://careers.appian.com/blog/life-at-appian/take-that-unlimited-pto-biking-down-the-east-coast/" target="_blank" class="button_secondary">Appian Blog Article <i class="fas fa-external-link-square-alt"></i></a>
@@ -515,10 +516,10 @@
 						
 					</div>
 					<div class="sideBySideItem_isLast width_50 align_right">
-						<a href="foca17.html" class="navigation">
+						<a href="empirestatetrail.html" class="navigation">
 							<div class="content_text_no_margin">Next Adventure &nbsp <i class="fas fa-arrow-right"></i></div>
 						</a>
-						<div class="content_text_no_margin">Journey Back to the Ice</div>
+						<div class="content_text_no_margin">Empire State Trail</div>
 					</div>
 				</div>
     </div>
