--- a/uiux.html
+++ b/uiux.html
@@ -75,6 +75,15 @@
 					<div class="card_tag htmlcss">React</div>
 				</div>
 			</a>
+			<a href="projects/clarative.html" class="card">
+				<img class="card_image outline" src="assets/clarative-cover.png"/>
+				<div class="card_title">Clarative</div>
+				<div class="card_description">Designing an AI, natural language data analytics platform</div>
+				<div class="card_tag_container">
+						<div class="card_tag ux">UX/UI</div>
+						<div class="card_tag htmlcss">Webflow</div>
+				</div>
+			</a>
 			<a href="projects/appian.html" class="card">
 				<img class="card_image" src="assets/appian-2.png"/>
 				<div class="card_title">Appian</div>
