--- a/projects/superpay.html
+++ b/projects/superpay.html
@@ -269,10 +269,10 @@
                 <div class="content_text_no_margin">SuperDial</div>
             </div>
             <div class="sideBySideItem_isLast width_50 align_right fixed">
-                <a href="appian.html" class="navigation">
+                <a href="clarative.html" class="navigation">
                     <div class="content_text_no_margin">Next Project &nbsp <i class="fas fa-arrow-right"></i></div>
                 </a>
-                <div class="content_text_no_margin">Appian</div>
+                <div class="content_text_no_margin">Clarative</div>
             </div>
         </div>
         </div>
