adding year of code

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 			<a href="index.html" class="logo logo_white" id="logo"></a>	
 		<header class="container">
 		<div class="topnav dark" id="myTopnav">
-			<a href="uiux.html" class="unselected dark">UX</a>
+			<a href="uiux.html" class="unselected dark">UX & Dev</a>
 			<a href="illustration.html" class="unselected dark">Digital</a>
 			<a href="physical.html" class="unselected dark">Physical</a>
 			<a href="misc.html" class="unselected dark">Adventures</a>
