--- a/projects/adventure-book.html
+++ b/projects/adventure-book.html
@@ -22,7 +22,7 @@
 			<a href="../index.html" class="logo" id="logo"></a>
 		<header class="container">
 			<div class="topnav" id="myTopnav">
-				<a href="../uiux.html" class="unselected">UX</a>
+				<a href="../uiux.html" class="unselected">UX & Dev</a>
 				<a href="../illustration.html" class="active">Digital</a>
 				<a href="../physical.html" class="unselected">Physical</a>
 				<a href="../misc.html" class="unselected">Adventures</a>
