--- a/projects/meexarps.html
+++ b/projects/meexarps.html
@@ -21,7 +21,7 @@
 			<a href="../index.html" class="logo" id="logo"></a>
 		<header class="container">
 			<div class="topnav" id="myTopnav">
-				<a href="../uiux.html" class="active">UX</a>
+				<a href="../uiux.html" class="active">UX & Dev</a>
 				<a href="../illustration.html" class="unselected">Digital</a>
 				<a href="../physical.html" class="unselected">Physical</a>
 				<a href="../misc.html" class="unselected">Adventures</a>
