--- a/projects/year-of-code.html
+++ b/projects/year-of-code.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Regina | Woodsmoke</title>
+	<title>Regina | Year of Code</title>
 	<link rel="stylesheet" type="text/css" href="../assets/main.css">
 	<link rel="preconnect" href="https://fonts.gstatic.com">
-	<link href="https://fonts.googleapis.com/css2?family=Cabin:wght@400;700&family=Source+Sans+Pro:ital,wght@0,300;0,400;0,600;1,300;1,400;1,600&display=swap" rel="stylesheet">	<link runat="server" rel="icon" type="image/png" href="assets/favicon-01.png">
+	<link href="https://fonts.googleapis.com/css2?family=Cabin:wght@400;700&family=Source+Sans+Pro:ital,wght@0,300;0,400;0,700;1,300;1,400&display=swap" rel="stylesheet"> 	
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<script src="https://kit.fontawesome.com/be865165bc.js" crossorigin="anonymous"></script>
 	<link runat="server" rel="icon" type="image/png" href="../assets/favicon-01.png">
@@ -19,11 +19,11 @@
 </head>
 <body>
 	<div class="head" id="head">
-		<a href="../index.html" class="logo" id="logo"></a>
+			<a href="../index.html" class="logo" id="logo"></a>
 		<header class="container">
 			<div class="topnav" id="myTopnav">
-				<a href="../uiux.html" class="unselected">UX & Dev</a>
-				<a href="../illustration.html" class="active">Digital</a>
+				<a href="../uiux.html" class="active">UX & Dev</a>
+				<a href="../illustration.html" class="unselected">Digital</a>
 				<a href="../physical.html" class="unselected">Physical</a>
 				<a href="../misc.html" class="unselected">Adventures</a>
 				<a href="../about.html" class="unselected">About</a>
@@ -37,17 +37,14 @@
 	<div class="container_summary">
 		<div class="section_summary">
 			<div class="caption_container">
-				<img class="summary_image" src="../assets/woodsmoke.jpeg"/>
+				<img class="summary_image" src="../assets/year-of-code-cover.png"/>
 			</div>
 		</div>
 		<div class="section_summary_text">
-			<div class="summary_title">Woodsmoke 2019</div>
+			<div class="summary_title">2024: Year of Code</div>
 			<br/>
 			<div class="summary_description"> 
-                    The Dartmouth Outing Club (DOC) is home to the nation's oldest student-run outdoors club. It's a pretty incredible community with groups for everyone interested in getting outside, from the novice kayaker to the experienced boulderer. </br></br>
-                    For Dartmouth's 250th anniversary, I designed and published Woodsmoke 2019, a celebration of the amazing explorations of folks in the DOC from 2017-2019. Special thanks to Rory Gawler '05 for supporting me throughout this process and to the Outdoor Programs Office for their dedication to getting us outside.
-			</br>
-			<a href="https://outdoors.dartmouth.edu/doc/woodsmoke.html" target="_blank" class="button_secondary">View the full PDF <i class="fas fa-external-link-square-alt"></i></a>
+                    Time to upgrade my web development capabilities! In 2024, I plan to create 4 apps of increasing complexity as a way to keep growing and learning :)
 			</div>
 			<a href="#container_content"><button class="button_circle_arrow" >
 				<i class="fas fa-arrow-down"></i>			
@@ -56,28 +53,46 @@
     </div>
     <div id="container_content" style="padding-top: 150px;"></div>
 	<div class="container_content_stack vertical">
-        <div class="card_title">Sample Pages</div>
-    </br>
-        <img class="summary_image outline" src="../assets/sample1.png"/>
-        <img class="summary_image outline" src="../assets/sample2.png"/>
-        <img class="summary_image outline" src="../assets/sample3.png"/>
-		<img class="summary_image outline" src="../assets/sample4.png"/>
-		<div class="border"></div>
-			<div class="container_sideBySide"> 
-					<div class="sideBySideItem width_50 fixed">
-						<a href="outing-guide.html" class="navigation">
-							<div class="content_text_no_margin"><i class="fas fa-arrow-left"></i>&nbsp Previous Project</i></div>
-						</a>
-						<div class="content_text_no_margin">Outing Guide Cover</div>
-					</div>
-					<div class="sideBySideItem_isLast width_50 align_right fixed">
-						<a href="adventure-book.html" class="navigation">
-							<div class="content_text_no_margin">Next Project &nbsp <i class="fas fa-arrow-right"></i></div>
-						</a>
-						<div class="content_text_no_margin">Adventure Book</div>
-					</div>
-				</div>
+	</br>
+	<div class="container_sideBySide stackPhone"> 
+        <div class="summary_title">Covid Campfire Cards (Jan - Feb)</div></br>
+        <img class="summary_image" src="../assets/year-of-code-cover.png"/>
+        <div>
+            <a href="https://covid-campfire-cards.onrender.com/" target="_blank" class="button_primary">Play the Game <i class="fas fa-external-link-square-alt"></i></a>
+            <a href="https://github.com/regina-yan/card-app" target="_blank" class="button_secondary">Check out the Code <i class="fas fa-external-link-square-alt"></i></a>
+            Note: It will take ~30 seconds for the app to spin up
+        </div>
+        <br/><br/> <br/><br/>
 
+            <div class="content_text">
+                In January 2024, my boyfriend Sheppard and I went on a camping & surfing trip where he introduced me to the only card game I don't hate haha! Right after the trip, he got covid and we spent 10 days facetiming each other from the bedroom and living room. During that time, I designed & built this app for us to continue playing this <strong>2-person card game</strong>  virtually.
+                <br/><br/>
+                <div class="container_callout content_text block">
+                New skills: syncing data to Firebase, basic (anonymous) user authentication
+            </div>
+            <div class="card_title">Process snapshots</div>
+            </div>
+		</div>
+	</br></br>	
+
+</br>
+
+</br>
+	<div class="border"></div>
+	<div class="container_sideBySide"> 
+		<div class="sideBySideItem width_50 fixed">
+			<a href="clarative.html" class="navigation">
+				<div class="content_text_no_margin"><i class="fas fa-arrow-left"></i>&nbsp Previous Project</i></div>
+			</a>
+			<div class="content_text_no_margin">Clarative</div>
+		</div>
+		<div class="sideBySideItem_isLast width_50 align_right fixed">
+			<a href="appian.html" class="navigation">
+				<div class="content_text_no_margin">Next Project &nbsp <i class="fas fa-arrow-right"></i></div>
+			</a>
+			<div class="content_text_no_margin">Appian</div>
+		</div>
+	</div>
     </div>
 </div>
 <div class="footer">
@@ -89,11 +104,8 @@
 		<i class="far fa-paper-plane"></i> Get in Touch! Contact me at reginayan96@gmail.com
 	</div>
 </div>
-
 </body>
-<script>
-	document.getElementById("year").innerHTML = new Date().getFullYear();
-	</script>
+<script>document.getElementById("year").innerHTML = new Date().getFullYear();</script>
 <script>
 	$(document).ready(function(){
 		// Add smooth scrolling to all links
