--- a/uiux.html
+++ b/uiux.html
@@ -24,7 +24,7 @@
 			<a href="index.html" class="logo" id="logo"></a>
 		<header class="container">
 			<div class="topnav" id="myTopnav">
-				<a href="uiux.html" class="active">UX</a>
+				<a href="uiux.html" class="active">UX & Dev</a>
 				<a href="illustration.html" class="unselected">Digital</a>
 				<a href="physical.html" class="unselected">Physical</a>
 				<a href="misc.html" class="unselected">Adventures</a>
@@ -81,7 +81,20 @@
 				<div class="card_description">Designing an AI, natural language data analytics platform</div>
 				<div class="card_tag_container">
 						<div class="card_tag ux">UX/UI</div>
-						<div class="card_tag htmlcss">Webflow</div>
+						<div class="card_tag web">Webflow</div>
+				</div>
+			</a>
+			<a href="projects/year-of-code.html" class="card">
+				<img class="card_image" src="assets/year-of-code-cover.png"/>
+				<div class="card_title">2024: Year of Code</div>
+				<div class="card_description">I'm on a learning quest to (design and) develop 4 mini apps of increasing complexity in 2024.</div>
+				<div class="card_tag_container">
+					<div class="card_tag ux">UX/UI</div>
+					<div class="card_tag htmlcss">HTML/CSS</div>
+					<div class="card_tag htmlcss">Javascript</div>
+					<div class="card_tag htmlcss">React</div>
+					<div class="card_tag htmlcss">Full-Stack</div>
+
 				</div>
 			</a>
 			<a href="projects/appian.html" class="card">
