--- a/projects/appian.html
+++ b/projects/appian.html
@@ -22,7 +22,7 @@
 			<a href="../index.html" class="logo" id="logo"></a>
 		<header class="container">
 			<div class="topnav" id="myTopnav">
-				<a href="../uiux.html" class="active">UX</a>
+				<a href="../uiux.html" class="active">UX & Dev</a>
 				<a href="../illustration.html" class="unselected">Digital</a>
 				<a href="../physical.html" class="unselected">Physical</a>
 				<a href="../misc.html" class="unselected">Adventures</a>
@@ -150,10 +150,10 @@
 	<div class="border"></div>
 	<div class="container_sideBySide"> 
 		<div class="sideBySideItem width_50 fixed">
-			<a href="clarative.html" class="navigation">
+			<a href="year-of-code.html" class="navigation">
 				<div class="content_text_no_margin"><i class="fas fa-arrow-left"></i>&nbsp Previous Project</i></div>
 			</a>
-			<div class="content_text_no_margin">Clarative</div>
+			<div class="content_text_no_margin">Year of Code</div>
 		</div>
 		<div class="sideBySideItem_isLast width_50 align_right fixed">
 			<a href="trailhead2.html" class="navigation">
