--- a/projects/clarative.html
+++ b/projects/clarative.html
@@ -22,7 +22,7 @@
 			<a href="../index.html" class="logo" id="logo"></a>
 		<header class="container">
 			<div class="topnav" id="myTopnav">
-				<a href="../uiux.html" class="active">UX</a>
+				<a href="../uiux.html" class="active">UX & Dev</a>
 				<a href="../illustration.html" class="unselected">Digital</a>
 				<a href="../physical.html" class="unselected">Physical</a>
 				<a href="../misc.html" class="unselected">Adventures</a>
@@ -88,10 +88,10 @@
 				<div class="content_text_no_margin">SuperBill: SuperPay</div>
 			</div>
 			<div class="sideBySideItem_isLast width_50 align_right fixed">
-				<a href="appian.html" class="navigation">
+				<a href="year-of-code.html" class="navigation">
 					<div class="content_text_no_margin">Next Project &nbsp <i class="fas fa-arrow-right"></i></div>
 				</a>
-				<div class="content_text_no_margin">Appian</div>
+				<div class="content_text_no_margin">Year of Code</div>
 			</div>
 		</div>
         </div>
