--- a/projects/foca17.html
+++ b/projects/foca17.html
@@ -23,7 +23,7 @@
 		<header class="container">
 			<!-- <a href="index.html"><img class="logo" src="assets/reginaLogo.png" alt="Regina Yan"></a> -->
 			<div class="topnav" id="myTopnav">
-				<a href="../uiux.html" class="unselected">UX</a>
+				<a href="../uiux.html" class="unselected">UX & Dev</a>
 				<a href="../illustration.html" class="unselected">Digital</a>
 				<a href="../physical.html" class="unselected">Physical</a>
 				<a href="../misc.html" class="active">Adventures</a>
