--- a/projects/wintercarnival.html
+++ b/projects/wintercarnival.html
@@ -23,7 +23,7 @@
 		<a href="../index.html"><img class="logo" id="logo" src="../assets/regina-logo.svg" alt="Regina Yan"></a>
 		<header class="container">
 			<div class="topnav" id="myTopnav">
-				<a href="../uiux.html" class="unselected">UX</a>
+				<a href="../uiux.html" class="unselected">UX & Dev</a>
 				<a href="../illustration.html" class="active">Digital</a>
 				<a href="../physical.html" class="unselected">Physical</a>
 				<a href="../misc.html" class="unselected">Adventures</a>
