adding images to year-of-code

--- a/projects/year-of-code.html
+++ b/projects/year-of-code.html
@@ -54,7 +54,7 @@
     <div id="container_content" style="padding-top: 150px;"></div>
 	<div class="container_content_stack vertical">
 	</br>
-	<div class="container_sideBySide stackPhone"> 
+	<div class="container_content_stack vertical"> 
         <div class="summary_title">Covid Campfire Cards (Jan - Feb)</div></br>
         <img class="summary_image" src="../assets/year-of-code-cover.png"/>
         <div>
@@ -62,15 +62,36 @@
             <a href="https://github.com/regina-yan/card-app" target="_blank" class="button_secondary">Check out the Code <i class="fas fa-external-link-square-alt"></i></a>
             Note: It will take ~30 seconds for the app to spin up
         </div>
-        <br/><br/> <br/><br/>
-
+        <br/>
             <div class="content_text">
                 In January 2024, my boyfriend Sheppard and I went on a camping & surfing trip where he introduced me to the only card game I don't hate haha! Right after the trip, he got covid and we spent 10 days facetiming each other from the bedroom and living room. During that time, I designed & built this app for us to continue playing this <strong>2-person card game</strong>  virtually.
                 <br/><br/>
                 <div class="container_callout content_text block">
                 New skills: syncing data to Firebase, basic (anonymous) user authentication
             </div>
+            </div>
             <div class="card_title">Process snapshots</div>
+            <br/>
+            <div class="content_text">
+                Writing game logic with minimal UI
+                <img class="summary_image outline" src="../assets/covid-testing.png" />
+            </div>
+            <div class="content_text">
+                Hooking up data with Firebase
+                <img class="summary_image outline" src="../assets/covid-database.png" />
+            </div>
+            <div class="content_text">
+                Designing the playing cards (Adobe Fresco / Illustrator)
+                <img class="summary_image outline" src="../assets/covid-design.jpeg" />
+            </div>
+            <div class="content_text">
+                Designing (and implementing!) the UI (Figma)
+                <img class="summary_image outline" src="../assets/covid-figma.png" />
+            </div>
+            <div>
+                <a href="https://covid-campfire-cards.onrender.com/" target="_blank" class="button_primary">Play the Game <i class="fas fa-external-link-square-alt"></i></a>
+                <a href="https://github.com/regina-yan/card-app" target="_blank" class="button_secondary">Check out the Code <i class="fas fa-external-link-square-alt"></i></a>
+                Note: It will take ~30 seconds for the app to spin up
             </div>
 		</div>
 	</br></br>	
